--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ h5 {
   background-image: url('./assets/desktop/mob.webp');
   background-color: #222;
   background-size: cover;
-  background-position: top;
+  background-position: center;
 }
 @media screen and (min-width: 900px) {
   .banner {
